--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-plugin-styled-components": "^2.0.6",
     "next": "12.1.0",
     "react": "17.0.2",
+    "react-beforeunload": "^2.5.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
