--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@babel/core": "^7.17.5",
     "axios": "^0.26.0",
     "babel-plugin-styled-components": "^2.0.6",
+    "jwt-decode": "^3.1.2",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-beforeunload": "^2.5.2",
